Fix board img on mobile

--- a/src/assets/styles/cmps/board/BoardPreview.css
+++ b/src/assets/styles/cmps/board/BoardPreview.css
@@ -2,7 +2,6 @@
 
     .board-preview {
         cursor: pointer;
-
         .board-img-wrapper {
             display: none;
         }
@@ -13,6 +12,7 @@
             display: flex;
             align-items: center;
             gap: 6px;
+            
 
             .svg-icon {
                 color: var(--secondary-text-color);
@@ -21,22 +21,25 @@
             .board-icon-wrapper {
                 width: 40px;
                 height: 40px;
+                overflow: hidden;
                 border-radius: 8px;
                 background-color: #cbddff;
-
+                
                 .svg-icon {
                     display: none !important;
-
+                    
                     svg {
                         display: none !important;
                     }
                 }
-
+                
                 .board-img-mobile {
                     display: block;
-                    width: 100%;
-                    height: 100%;
+                    width: 40px;
+                    height: 50px;
                     border-radius: 8px;
+                    object-fit: cover;
+                    object-position: -40px -10px;
                 }
             }
 
